# bifract

./: .dockerignore  .env.example  .gitignore  CLA.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  litellm-config.yaml  mkdocs.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  cla.yml  docker.yml  docs.yml  release.yml
caddy/: Caddyfile  Caddyfile.dev  entrypoint.sh  ship-logs.sh
clickhouse/config.d/: storage.azure.xml.example  storage.s3.xml.example  storage.xml
cmd/bifract/: main.go
cmd/bifract-server/: main.go
cmd/bifractctl/: main.go
db/: embed.go  init-clickhouse.sql  init-postgres.sql
deploy/k8s/: kustomization.yaml  namespace.yaml  network-policies.yaml
docs/: CNAME  api.md  index.md
docs/administration/: backup-restore.md  disk-quotas.md  fractals.md  ingest-tokens.md  monitoring.md  oidc-sso.md  prisms.md  reverse-proxy.md  schema-fields.md  users-and-roles.md
docs/alerting/: alert-feeds.md  alerts.md
docs/api/: alerts.md  authentication.md  comments.md  dashboards.md  fractals.md  health.md  ingestion.md  notebooks.md  querying.md  webhooks.md
docs/bql/: aggregation.md  basics.md  chain.md  display-and-sorting.md  enrichment.md  examples.md  field-operations.md  graph-traversal.md  join.md  time-functions.md  visualizations.md
docs/features/: ai-chat.md  (+5 more)
mcp/: README.md  pyproject.toml
mcp/bifract_mcp/: server.py
scripts/: build.ps1  build.sh  install.sh  loadtest.js  reset_clickhouse.sh
signatures/: cla.json
web/: index.html  login.html
(+371 files in other folders)
