[project]
name = "bifract-mcp"
version = "0.1.0"
description = "MCP server for Bifract log management platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
bifract-mcp = "bifract_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
